# rag

./: .gitignore  pyproject.toml  requirements.txt
data/text_files/: i7_details.txt  m1_details
notebook/: chroma_db_operations.ipynb  document.ipynb  pdf_loader.ipynb
src/: embedder.py  loader.py  main.py  retriever.py  server.py  utils.py  vector_store.py
