[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "faiss-cpu",
    "fastapi>=0.119.1",
    "ipykernel",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.1",
    "sentence-transformers",
    "uvicorn>=0.37.0",
]
